--- a/typescript-curso-1-arquivos-iniciais/tsconfig.json
+++ b/typescript-curso-1-arquivos-iniciais/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "outDir": "dist/js",
-        "target": "ES6"
+        "target": "ES6",
+        "noEmitOnError": true //True = Não gera .js se o .ts estiver errado | false = Sempre gera .js
     },
     "include": ["app/**/*"]
 }
