--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "ALURA-FRONT-END",
   "lockfileVersion": 2,
   "requires": true,
-  "packages": {}
+  "packages": {},
+  "dependencies": {
+    "nvm": "^0.0.4"
+  }
 }
